--- a/src/pages/Main/components/ChooseTaxopark/ChooseTaxopark.css
+++ b/src/pages/Main/components/ChooseTaxopark/ChooseTaxopark.css
@@ -119,8 +119,8 @@
 }
 
 .carousel-card-bonuses {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 20px 1fr;
   gap: 10px;
 }
 
