--- a/src/pages/Main/components/FieldForm/FieldForm.css
+++ b/src/pages/Main/components/FieldForm/FieldForm.css
@@ -11,7 +11,7 @@
 }
 
 .field-form-header {
-  background-image: url("../../images/footer-bg.png");
+  background-image: url("../../../../images/footer-bg.png");
   background-size: cover;
   background-repeat: no-repeat;
   padding: 50px 0;
