--- a/src/pages/Main/components/ChooseTaxopark/components/Carousel/Carousel.css
+++ b/src/pages/Main/components/ChooseTaxopark/components/Carousel/Carousel.css
@@ -55,7 +55,8 @@
     color: rgba(0, 0, 0, 0.5);
 }
 
-.ant-list-items .related-carousel-item {
+/* .ant-list-items .related-carousel-item {
+    height: 100%;
     display: flex;
     border-radius: 10px;
     padding: 0;
@@ -66,7 +67,7 @@
     border-color: transparent;
     box-sizing: border-box;
     overflow: hidden;
-}
+} */
 
 .related-carousel-item-content {
     display: flex;
