--- a/src/pages/Main/components/ChooseTaxopark/components/Carousel/CarouselItem/CarouselItem.css
+++ b/src/pages/Main/components/ChooseTaxopark/components/Carousel/CarouselItem/CarouselItem.css
@@ -1,76 +1,72 @@
-.flip-card {
-    width: 100%;
-    height: 650px;
-    margin: 10px;
-    background: transparent;
-}
-
 .flip-card-inner {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    transform-style: preserve-3d;
-    transition: transform 0.6s;
+  flex: 0 0 auto;
+  flex-grow: 1;
+  box-sizing: border-box;
+  background: transparent;
+  padding: 10px;
+  gap: 10px;
+  transform-style: preserve-3d;
+  display: grid;
+  transition: transform 0.6s;
 }
 
 .flip-card-inner.flipped {
-    transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .flip-card-front,
 .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-}
-
-.flip-card-front {
-    z-index: 2;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
 }
 
 .flip-card-back {
-    transform: rotateY(180deg);
-    z-index: 1;
+  transform: rotateY(180deg);
 }
 
 .details-list {
-    list-style: none;
-    padding: 0;
-    margin: 10px 0;
+  list-style: none;
+  padding: 0;
+  margin: 10px 0;
 }
 
 .details-list li {
-    margin-bottom: 10px;
-    font-size: 14px;
+  margin-bottom: 10px;
+  font-size: 14px;
 }
 
 .promo-list {
-    list-style: disc;
-    padding-left: 20px;
-    margin: 5px 0;
+  list-style: disc;
+  padding-left: 20px;
+  margin: 5px 0;
 }
 
 .carousel-card-button {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .carousel-card-back-button {
-    position: absolute;
-    top: 16px;
-    left: 16px;
-    font-size: 32px;
-    cursor: pointer;
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  font-size: 32px;
+  cursor: pointer;
 }
 
 .carousel-card-info-backside {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
 .carousel-card-details {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    gap: 10px;
-    flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 10px;
+  flex-grow: 1;
 }
