--- a/src/pages/Main/components/ChooseTaxopark/ChooseTaxopark.css
+++ b/src/pages/Main/components/ChooseTaxopark/ChooseTaxopark.css
@@ -165,7 +165,7 @@
   height: 100%;
 }
 
-.carousel-card-info>h3 {
+.carousel-card-info > h3 {
   font-size: 20px;
   margin-bottom: 0;
   margin-top: 0;
@@ -189,7 +189,7 @@
   font-size: 30px;
 }
 
-.slick-slide>div {
+.slick-slide > div {
   margin: 10px;
 }
 
@@ -201,6 +201,12 @@
 
 .filters-title {
   text-align: start;
+}
+
+.filters-info {
+  display: flex;
+  align-items: center;
+  gap: 4px;
 }
 
 .filters-grid {
@@ -243,7 +249,6 @@
 }
 
 @media (max-width: 764px) {
-
   .carousel-card .ant-card-body::after,
   .carousel-card .ant-card-body::before {
     content: none;
@@ -253,11 +258,11 @@
     margin-top: 0;
   }
 
-  .choose-taxopark-title>h2 {
+  .choose-taxopark-title > h2 {
     font-size: 30px;
   }
 
-  .choose-taxopark-title>span {
+  .choose-taxopark-title > span {
     font-size: 16px;
   }
 
